Fix ChannelManagerTest